fixed overflow over game container

--- a/index.css
+++ b/index.css
@@ -105,7 +105,7 @@ main #container #game-con ul li label{
     background-color: rgb(209, 216, 223);
     border-radius: 5px;
     height:auto;
-    width: 80vw;
+    width: 50%;
     padding: 20px 10px 30px 10px;
 
 } 
